<resources>
    <string name="app_name">BasketballScoreboard</string>
    <string name="action_settings">Settings</string>
    <string name="default_subtitle">12/05/2015</string>
    <string name="default_title">Team A 0 - 2 Team B</string>
    <string name="new_game">Nuevo Juego</string>
    <string name="resume_game">Resumen de juego</string>
    <string name="text_team_a">Team A</string>
    <string name="action_3_points">+3 POINTS</string>
    <string name="action_2_points">+2 POINTS</string>
    <string name="action_free_throw">FREE THROW</string>
    <string name="text_team_b">Team B</string>
    <string name="action_reset">reset</string>
    <string name="cancel">Cancelar</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="save">Guardar</string>
</resources>
